# BlackJack

./: .gitignore  01_PRODUCT_VISION.md  02_ROADMAP_DRAFT.md  03_V1_SIMULATION_SPEC.md  04_LEARNING_AND_MASTERY_NOTES.md  05_RESEARCH_BRIEF.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  ROADMAP.md
.claude/agents/: audit-auditor.md  audit-collector.md  audit-editor.md  audit-examiner.md  audit-verifier.md
.github/workflows/: pages.yml
.superpowers/sdd/: task-1-report.md
.wl/sdd/: progress-p1-remediation.md  remediation-c1-brief.md  remediation-c2-brief.md  remediation-c3-brief.md  remediation-c4-brief.md  remediation-c5-brief.md
crates/blackjack-core/: Cargo.toml
crates/blackjack-core/src/: boundary.rs  lib.rs  main.rs  rng.rs  rules.rs  session.rs  shoe.rs  strategy.rs  types.rs  wasm.rs
crates/blackjack-core/tests/: boundary_tests.rs  dealer_terminal_tests.rs  envelope_tests.rs  free_play_check.rs  golden_fixtures.rs  prefix_shoe_tests.rs  reshuffle_tests.rs  rng_determinism_tests.rs  round_log_tests.rs  rules_tests.rs  ruleset_validation_tests.rs  session_tests.rs  shoe_tests.rs  strategy_tests.rs
crates/blackjack-core/tests/fixtures/: response_actions.json  response_hand_facts.json  response_strategy_compatibility.json  session_resolved.json  session_start.json
docs/: architecture.md
journal/: decisions.md  docs-map.md
journal/ops/: phase.md  (+2 more)
scripts/: kanban.ts  research-gate.ts  research-roles-lint.ts
tools/: play_cli.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+455 files in other folders)
